--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Darshan's Portfolio">
+    <meta name="description" content="Hey there I am Darshan a web developer">
     <meta name="keywords" content="Portfolio, Darshan M Hegde, Darshan Hegde, hegdes007">
     <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Hey there...👋</title>
+    <title>Darshan's Portfolio</title>
   </head>
   <body>
 
@@ -51,7 +51,7 @@
                     <div class="info">
                         <h3>Hello I Am</h3>
                         <h1>Darshan M Hegde</h1>
-                        <h3>I am a Web Developer</h3>
+                        <h3 class="typing"></h3>
                         <h4>Follow me here</h4>
                     </div>
                     <div class="social">
@@ -67,6 +67,7 @@
     <!-- Glassmorphism design -->
     <section id="skills">
         <div class="glasscontainer">
+            <h2 class="heading">Skills</h2>
             <div class="containerglass">
                 <div class="glass">
                     <div class="skillscontainer">
@@ -103,6 +104,7 @@
     <!-- Projects -->
     <section id="projects">
         <div class="projectcontainer">
+            <h2 class="heading">Projects</h2>
             <div class="projects">
                 <a href="https://react-tasks-tracker.herokuapp.com/" target="_blank" rel="noreferrer">
                     <div class="project">
@@ -146,19 +148,22 @@
 
     <!-- Neumorphic Contact form -->
     <section id="contact">
-       <div class="neumorphiccontainer">
-            <div class="contact_form">
-                <form action="https://formcarry.com/s/fCZbSQ-0LE" method="POST" accept-charset="UTF-8" >
-                    <label for="name">Your Name</label>
-                    <input type="text" name="Name" id="name" placeholder="Jhon Doe" required>
-                    <label for="mailid">E-mail</label>
-                    <input type="email" name="mailid" id="mailid" placeholder="jhondoe69@email.com" required>
-                    <label for="number">Phone number</label>
-                    <input type="tel" pattern="[0-9]{10}" name="phone" id="phone" placeholder="9886788888">
-                    <label for="message">Message</label>
-                    <textarea name="message" id="message" cols="50" rows="10" required></textarea>
-                    <button type="submit" value="">Submit</button>
-                </form>
+        <h2 class="heading">Contact Me</h2>
+        <div class="containerform">
+            <div class="neumorphiccontainer">
+                <div class="contact_form">
+                    <form action="https://formcarry.com/s/fCZbSQ-0LE" method="POST" accept-charset="UTF-8" >
+                        <label for="name">Your Name</label>
+                        <input type="text" name="Name" id="name" placeholder="Jhon Doe" required>
+                        <label for="mailid">E-mail</label>
+                        <input type="email" name="mailid" id="mailid" placeholder="jhondoe69@email.com" required>
+                        <label for="number">Phone number</label>
+                        <input type="tel" pattern="[0-9]{10}" name="phone" id="phone" placeholder="9886788888">
+                        <label for="message">Message</label>
+                        <textarea name="message" id="message" cols="50" rows="10" required></textarea>
+                        <button type="submit" value="">Submit</button>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
