--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                             <i class="fab fa-bootstrap"></i>
                             <h3>Bootstrap</h3>
                         </div>
-                        <div class="react skills">
-                            <i class="fab fa-react"></i>
-                            <h3>ReactJS</h3>
+                        <div class="angular skills">
+                            <i class="fab fa-angular"</i>
+                            <h3>Angular</h3>
                         </div>
                         <div class="figma skills">
                             <i class="fab fa-figma"></i>
@@ -106,7 +106,7 @@
         <div class="projectcontainer">
             <h2 class="heading">Projects</h2>
             <div class="projects">
-                <a href="https://react-tasks-tracker.herokuapp.com/" target="_blank" rel="noreferrer">
+                <a href="https://to-do-taskstracker.netlify.app/" target="_blank" rel="noreferrer">
                     <div class="project">
                         <img src="./Projects/Task-Tracker.JPG" alt="Task-Tracker">
                         <h3>Task-Tracker</h3>
