Fixed multiple icons

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <h3>Bootstrap</h3>
                         </div>
                         <div class="angular skills">
-                            <i class="fab fa-angular"</i>
+                            <i class="fab fa-angular"></i>
                             <h3>Angular</h3>
                         </div>
                         <div class="figma skills">
