Added Cypress Icon in Skills

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Portfolio, Darshan M Hegde, Darshan Hegde, hegdes007">
     <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link rel="stylesheet" href="./cypress-icon/style.css" />
     <link rel="stylesheet" href="./style.css" />
     <title>Darshan's Portfolio</title>
   </head>
@@ -91,9 +92,9 @@
                             <i class="fab fa-angular"></i>
                             <h3>Angular</h3>
                         </div>
-                        <div class="figma skills">
-                            <i class="fab fa-figma"></i>
-                            <h3>Figma</h3>
+                        <div class="cypress skills">
+                            <i class=" icon-cypress"></i>
+                            <h3>Cypress</h3>
                         </div>
                     </div>
                 </div>
